--- a/okay-post.html
+++ b/okay-post.html
@@ -53,5 +53,44 @@
             </div>
         </div>
     </div>
+    <div class="box">
+        <div class="container">
+            <h2>Насколько выгодно покупать?</h2>
+            <ul class="box-list">
+                <li class="box-item">
+                    <form><button><img src="./img/box/Vectorleft.svg" alt="vektor"> </button></form>
+                </li>               
+                <li class="box-item">
+                    <img src="./img/box/forma.svg" alt="rasm">
+                    <img src="./img/box/курсор.svg" alt="kursor">
+                    <p>Одежда</p>
+                </li>               
+                <li class="box-item">
+                    <img src="./img/box/tv.svg" alt="rasm">                   
+                    <p>Электроника</p>
+                </li>               
+                <li class="box-item">
+                    <img src="./img/box/cash.svg" alt="rasm">
+                    
+                    <p>Аксессуары</p>
+                </li>               
+                <li class="box-item">
+                    <img src="./img/box/baby.svg" alt="rasm">                   
+                    <p>Для детей</p>
+                </li>                
+                <li class="box-item">
+                    <img src="./img/box/sport.svg" alt="rasm">                    
+                    <p>Для спорта</p>
+                </li>
+                <li class="box-item">
+                    <img src="./img/box/cosmetic.svg" alt="rasm">                   
+                    <p>Косметика</p>
+                </li>
+                <li class="box-item">
+                    <form><button><img src="./img/box/vectorright.svg" alt="vektor"> </button></form>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
