--- a/okay-post.html
+++ b/okay-post.html
@@ -133,5 +133,83 @@
             </div>
         </div>
     </div>
+    <div class="subads">
+        <div class="container">
+            
+            <div class="subads-left">
+                <img src="./img/ads/Иллюстрация.svg" alt="rasim">
+            </div>
+
+            <div class="subads-right">
+                <h1>Поручите нашим мастерам шопинга оформить заказы в английских магазинах и освободите время для более важных дел.</h1>
+                <p>Такой способ покупки также подойдёт, если магазин принимает только английские карты.
+                </p>    
+                <a href="#">Попробовать</a>
+          </div>
+        </div>
+    </div>
+    <div class="delivery">
+        <div class="container">
+            <h2>    OkeyPost удобная и быстрая доставка посылок из Великобритании </h2>
+            <p>
+                Рассчитайте стоимость доставки из Англии к вам домой. Мы получим ваши посылки на складе, при необходимости объединим несколько доставок в одну и отправим их к вам надежно упакованными.
+            </p>
+            <div class="delivery-box">
+                <ul class="delivery-list">
+                    <li class="delivery-item">
+                        <input type="search">
+                        <h6>Страна:</h6>
+                        <img src="" alt="rasm">
+                        <p>Россия</p>    
+                    </li>
+                </ul>
+            </div>
+            <h3>Варианты доставки:</h3>
+            <ul class="delivery-sublist">
+                <li class="delivery-subitem">
+                    <img src="./img/delivery/pochta.svg" alt="rasim">
+                    <h5>Почта России </h5>
+                  <div class="delivery-subitem-right">  <div><p>Сроки:</p>
+                    <h6>10-14 дней</h6></div>
+                    <div><p>Стоимость доставки:</p>
+                    <h6>от £27.00  <img src="./img/delivery/Инфо.svg" alt="rasm"></h6></div>
+                    <div><p>Итого:</p>
+                    <h6>£41.99</h6></div>
+                    <div>
+                    <img src="./img/delivery/Vectorbottom.svg" alt="rasm">
+                </div>
+                    </div>
+                </li>
+                <li class="delivery-subitem">
+                    <img src="./img/delivery/war.svg" alt="rasim">
+                    <h5>Почта России </h5>
+                  <div class="delivery-subitem-right">  <div><p>Сроки:</p>
+                    <h6>9-12 дней</h6></div>
+                    <div><p>Стоимость доставки:</p>
+                    <h6>от £40.00  <img src="./img/delivery/Инфо.svg" alt="rasm"></h6></div>
+                    <div><p>Итого:</p>
+                    <h6>£54.55</h6></div>
+                    <div>
+                    <img src="./img/delivery/Vectorbottom.svg" alt="rasm">
+                </div>
+                    </div>
+                </li>
+                <li class="delivery-subitem">
+                    <img src="./img/delivery/lokation.svg" alt="rasim">
+                    <h5>Почта России </h5>
+                  <div class="delivery-subitem-right">  <div><p>Сроки:</p>
+                    <h6>10-14 дней</h6></div>
+                    <div><p>Стоимость доставки:</p>
+                    <h6>от £13.00  <img src="./img/delivery/Инфо.svg" alt="rasm"></h6></div>
+                    <div><p>Итого:</p>
+                    <h6>£90.50</h6></div>
+                    <div>
+                    <img src="./img/delivery/Vectorbottom.svg" alt="rasm">
+                </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div >
 </body>
 </html>
