--- a/okay-post.html
+++ b/okay-post.html
@@ -211,5 +211,10 @@
             </ul>
         </div>
     </div >
+    <main>
+        <div class="container">
+            <h2>4 простых шага для ваших покупок в Великобритании</h2>
+        </div>
+    </main>
 </body>
 </html>
