--- a/okay-post.html
+++ b/okay-post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -211,9 +211,27 @@
             </ul>
         </div>
     </div >
-    <main>
+    <main class="main">
         <div class="container">
-            <h2>4 простых шага для ваших покупок в Великобритании</h2>
+            <h2>4 простых шага для ваших покупок в Великобританиищ</h2>
+            <ul class="main-list">
+                <li class="main-item"> <img src="./img/main/market.svg" alt="rasm">
+                <h3>вы ВЫБИРАЕТЕ ТОВАР</h3>
+                <p>в английском магазине, оплачиваете и указываете <span>адрес склада</span> OkeyPost</p></li>
+                <li class="main-item"> <img src="./img/main/setka.svg" alt="rasm">
+                <h3>ПОКУПКИ ПРИХОДЯТ НА СКЛАД</h3>
+                <p>и появляются в вашем личном кабинете на нашем сайте</p></li>
+                <li class="main-item"> <img src="./img/main/location.svg" alt="rasm">
+                <h3>ОТПРАВЛЯЕМ ИХ К ВАМ ДОМОЙ</h3>
+                <p>в надежной упаковке, по выгодной цене и очень быстро</p></li>
+                <li class="main-item"> <img src="./img/main/sklad.svg" alt="rasm">
+                <h3>ЗАБИРАЕТЕ свою ПОСЫЛКУ</h3>
+                <p>в пункте выдачи, на почте или с курьером</p></li>
+            </ul>
+            <p>Не хотите разбираться самостоятельно, наши мастера шопинга с радостью купят все товары за вас.</p>
+            <button>
+                Быстрая покупка
+            </button>
         </div>
     </main>
 </body>
