--- a/okay-post.html
+++ b/okay-post.html
@@ -234,5 +234,43 @@
             </button>
         </div>
     </main>
+    <div class="subads">
+        <div class="container">
+            
+            <div class="subads-left">
+                <img src="./img/ads/komp.svg" alt="rasim">
+            </div>
+
+            <div class="subads-right">
+                <h1>Виртуальный тур по нашему складу в реальном времени</h1>
+                <p>Вы можете всегда посмотреть на нашу слаженую работу на складе
+                </p>    
+                <a href="#">Попробовать</a>
+          </div>
+        </div>
+    </div>
+   <div class="wrapper">
+    <div class="container">
+        <h2>120 000 довольных клиентов в России уже сделали свой выбор</h2>
+        <p>За последний год десятки тысяч наших клиентов заказали товары из Англии и оставили 19 633 отзыва</p>
+        <ul class="wrapper-list">
+            <li class="wrapper-item">
+                <img src="./img/wrapper/calendar.svg" alt="rasm">
+                <h4>Больше не значит дороже</h4>
+                <p>С ростом веса посылки цена за каждые 0.5 кг уменьшается в прогрессии.</p>
+            </li>
+            <li class="wrapper-item">
+                <img src="./img/wrapper/calendar.svg" alt="rasm">
+                <h4>Больше не значит дороже</h4>
+                <p>С ростом веса посылки цена за каждые 0.5 кг уменьшается в прогрессии.</p>
+            </li>
+            <li class="wrapper-item">
+                <img src="./img/wrapper/calendar.svg" alt="rasm">
+                <h4>Больше не значит дороже</h4>
+                <p>С ростом веса посылки цена за каждые 0.5 кг уменьшается в прогрессии.</p>
+            </li>
+        </ul>
+    </div>
+   </div>
 </body>
 </html>
